# drone-middleware

./: LICENSE  README.md
apps/comms/: mavlink_ground.py  mavlink_vehicle.py  pprz_ground.py  pprz_vehicle.py  run_pprz_ground.sh  run_pprz_vehicle.sh
apps/debug/: monitor.py
broker/: .gitignore  configure.ac
broker/src/: Makefile.am  main.c  zhelpers.hpp
dmwtest/: Makefile.am  configure.ac
dmwtest/src/: .gitignore  main.c
doc/: requirements.txt  running_sim.txt
etc/avahi/: dmw.service
lib/: README.md
libdmw/: configure.ac  libtool
libdmw/src/: .gitignore  Makefile.am  libdmw.c  libdmw.h  libdmw.pc.in  uthash.h
protocol/: .gitignore  compile.sh
protocol/protobuf/: vehicle.proto
pydmw/: .gitignore
pydmw/tests/: test.py
pydwm/: .gitignore  Makefile.am  aclocal.m4  libtool
pydwm/src/: pydmw.c
pydwm/test/: test.py
system/broker/src/: .gitignore  Makefile.am  main.c
system/dmwpymod/: configure.ac
system/dmwpymod/src/: Makefile.am
system/libdmw/: .gitignore  configure.ac  libtool
system/libdmw/src/: .gitignore  Makefile.am  dmw_avahi.c  dmw_avahi.h  libdmw.c  libdmw.h  zhelpers.h
system/pydmw/: dmw.py  setup.py
system/pydmw/dmw/: __init__.py  dmw.py  dmwconversions.py  dmwzeroconf.py
system/pydmw/tests/: test.py
tests/: run_server.sh
tests/dmwtest/: configure.ac
tests/dmwtest/src/: Makefile.am  main.c
tests/paparazzi/: run_gcs.sh  run_nps.sh
